--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.3",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.2",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
